[package]
name = "edg"
version = "0.1.0"
edition = "2021"
authors = ["bendn <bend.n@outlook.com"]
license = "MIT"
description = "eval() for rust"
categories = ["development-tools"]
repository = "https://github.com/bend-n/edg"
keywords = ["macro"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0.108"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
chrono = { version = "0.4.31", features = [
    "serde",
    "clock",
], default-features = false }
